<resources>
    <!--    앱 이름 -->
    <string name="app_name">CooClock</string>

    <!--  페이지 이름  -->
    <string name="recipe_write">나만의 레시피 작성</string>

    <!--    페이지 상단 구문 -->
    <string name="find_recipe">레시피를 검색해보세요</string>
    <string name="filter_pg_edit_text">검색 내용을 입력해주세요</string>
    <string name="my_refrigerator_page_text">내 냉장고 속 재료를 추가해보세요.</string>
    <string name="favorite_page_text">즐겨찾는 레시피를 확인해보세요.</string>
    <string name="mypage_text">마이페이지 입니다.</string>
    <string name="add_ingredient_page">냉장고 속 재료를 추가해 보세요.</string>
    <string name="add_ingredient_name">재료 이름</string>

    <string name="username">김클락님</string>

    <string name="filter_d0">필터</string>
    <string name="filter_d1">선택한 재료를 바탕으로 </string>
    <string name="filter_d2"> 최적의 레시피</string>
    <string name="filter_d3">를 추천합니다.</string>

    <string name="coock_time0">요리 시간</string>
    <string name="coock_time1">15분 이하</string>
    <string name="coock_time2">30분</string>
    <string name="coock_time3">60분 이상</string>

    <string name="time_step1">15 이하</string>
    <string name="time_step2">30</string>
    <string name="time_step3">60 이상</string>

    <string name="my_refrigerator_ingredient">나의 냉장고 재료</string>
    <string name="main_pg_search_hint">요리, 재료를 입력해주세요.</string>
    <string name="main_search_d2">레시피</string>
    <string name="main_search_d1">선택한 재료</string>
    <string name="main_search_d3">를 바탕으로</string>
    <string name="main_search_d0">맞춤형 레시피</string>
    <string name="main_recomend_d0">오늘의 추천 레시피</string>
    <string name="main_recommend_d1">냉장고 속 재료를 바탕으로 추천해드립니다.</string>
    <string name="main_myr_d0">나의 냉장고</string>
    <string name="main_myr_d1">당신의 냉장고 속 재료를 추가하세요</string>


    <!--  레시피 작성 페이지  -->
    <string name="picture">사진을 첨부하세요.</string>
    <string name="food_name">음식 이름</string>
    <string name="write_the_food_name">음식 이름을 입력하세요.</string>
    <string name="write_the_food_servings">레시피의 기준 인원을 숫자로 입력하세요.</string>
    <string name="write_the_ingridient_name">재료를 입력하세요.</string>
    <string name="write_the_ingridient_amount">재료의 양을 입력하세요.</string>
    <string name="write_the_recipie">레시피를 단계별로 입력하세요.</string>
    <string name="food_category">카테고리</string>
    <string name="check_the_food_category">카테고리를 선택하세요.</string>
    <string name="coock_time">요리 시간(분)</string>
    <string name="food_ingredient">재료</string>
    <string name="write_the_ingredient">재료를 입력하세요.</string>
    <string name="add_the_ingredient">재료 추가하기</string>
    <string name="recipe">레시피</string>
    <string name="write_the_recipe">레시피를 입력하세요.</string>
    <string name="add_the_recipe">레시피 추가하기</string>
    <string name="upload_recipe">레시피 업로드</string>
    <string name="my_recipe_d0">내가 올린 레시피</string>
    <string name="recipe_page_user_d1">님의 레시피</string>
    <string name="recipe_page_user_d0">이재원</string>
    <string name="recipe_page_title_d0">4</string>
    <string name="recipe_page_title_d1">인분 기준</string>
    <string name="recipe_page_title_d2">둘이 먹다 하나 죽어도 모르는 만둣국</string>
    <string name="recipe_page_ingredient_d0">재료</string>
    <string name="recipe_step_d00">달걀은 흰자, 노른자를 분리하고 약간의 소금을 넣어 풀고 대파는 어슷하게 썰어주세요.</string>
    <string name="recipe_page_d3">관련 노하우</string>
    <string name="recipe_page_d4">후기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_scan_page_d0">사진으로 바코드를 스캔하여 유통기한을 확인하세요.</string>
</resources>