<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".filtering_page">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pc_yello"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/pc_orange"
                android:textSize="22dp" />
<!--            android:fontFamily="@font/notosanskr_medium"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_recipe"
                android:textSize="18dp"
                android:textFontWeight="700"/>
<!--            android:fontFamily="@font/notosanskr_medium"-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/avatar"
                android:scaleType="fitEnd"
                android:layout_centerVertical="true" />
<!--            android:layout_alignParentRight="true"-->
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filter_pg_edit_text"
            android:textColorHint="@color/pc_yello"
            android:background="@drawable/search_edit_text_border"
            android:textSize="15dp"
            android:fontFamily="@font/notosanskr_medium"
            android:paddingLeft="15dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_d0"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:fontFamily="@font/notosanskr_medium"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_d1"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:fontFamily="@font/notosanskr_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_d2"
                android:textColor="@color/pc_yello"
                android:textSize="15dp"
                android:fontFamily="@font/notosanskr_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_d3"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:fontFamily="@font/notosanskr_medium"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coock_time0"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:fontFamily="@font/notosanskr_medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coock_time1"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>