<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".home_page">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".home_page">

    <!--ScrollView는 자식이 하나만. -> LinearLayout 으로 자식의 자식  설정 해야함.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 상단 앱바  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pc_yello"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="20dp" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/pc_orange"
                    android:fontFamily="@font/notosanskr_medium"
                    android:includeFontPadding="false"
                    android:textSize="22dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_recipe"
                    android:textColor="@color/black"
                    android:fontFamily="@font/notosanskr_light"
                    android:includeFontPadding="false"
                    android:textSize="17dp"
                    android:textFontWeight="700"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/avatar"
                    android:scaleType="fitEnd"
                    android:layout_centerVertical="true" />

            </LinearLayout>
        </LinearLayout>

        <!-- 검색어 입력부 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <!-- 검색어 타이틀 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_search_d0"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:fontFamily="@font/notosanskr_medium"
                android:includeFontPadding="false"
                android:layout_marginBottom="10dp"/>

            <!-- 검색어 설명 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_search_d1"
                    android:textColor="@color/pc_yello"
                    android:textSize="15sp"
                    android:fontFamily="@font/notosanskr_regular"
                    android:includeFontPadding="false"
                    android:paddingRight="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_search_d3"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/notosanskr_regular"
                    android:includeFontPadding="false"
                    android:paddingRight="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_search_d2"
                    android:textColor="@color/pc_yello"
                    android:textSize="15sp"
                    android:fontFamily="@font/notosanskr_regular"
                    android:includeFontPadding="false" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_d3"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/notosanskr_regular"
                    android:includeFontPadding="false" />
            </LinearLayout>

            <!-- 검색어 입력칸 -->
            <LinearLayout
                android:id="@+id/goto_filtering_page"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:background="@drawable/search_edit_text_border">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/search_icon"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/search_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:layout_margin="1dp"
                    android:hint="@string/main_pg_search_hint"
                    android:textColorHint="@color/pc_yello"
                    android:textSize="15sp"
                    android:fontFamily="@font/notosanskr_medium"
                    android:background="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>

        <!-- 카데고리 선택부 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <!-- 카테고리 이동 버튼 -->
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/category_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                app:singleSelection="true"
                app:backgroundTint="@drawable/search_edit_text_border">

                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/food_type"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="종류별"
                    app:toggleCheckedStateOnClick="true"
                    app:strokeColor="@color/pc_yello" />

                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/food_situation"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="상황별"
                    app:strokeColor="@color/pc_yello"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <!-- 세부 카테고리 표시 부 -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="2"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:layout_marginTop="10dp">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <!-- 오늘의 추천 레시피부 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingHorizontal="20dp">
            <!-- 오늘의 추천 레시피 타이틀 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_recomend_d0"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:fontFamily="@font/notosanskr_medium"
                    android:includeFontPadding="false"/>
                <ImageView
                    android:id="@+id/go_recommended_recipe"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/go_icon"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <!-- 오늘의 추천 레시피 설명 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_recommend_d1"
                android:textColor="@color/btn_text"
                android:textSize="13sp"
                android:fontFamily="@font/notosanskr_medium"
                android:includeFontPadding="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <!-- 오늘의 추천 레시피 표시부 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommend_list"
            android:layout_width="wrap_content"
            android:layout_height="530dp"
            android:paddingHorizontal="10dp"
            android:nestedScrollingEnabled="false">
        </androidx.recyclerview.widget.RecyclerView>

        <!--        빈 공간 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="vertical">
        </LinearLayout>


        <!-- 나의 냉장고  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">
            <!-- 나의 냉장고 타이틀 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_myr_d0"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:fontFamily="@font/notosanskr_medium"
                    android:includeFontPadding="false"/>
                <ImageView
                    android:id="@+id/go_my_refrigerator"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/go_icon"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <!-- 나의 냉장고 설명 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_myr_d1"
                android:textColor="@color/btn_text"
                android:textSize="13sp"
                android:fontFamily="@font/notosanskr_medium"
                android:includeFontPadding="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_refrigerator_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:orientation="horizontal">
        </androidx.recyclerview.widget.RecyclerView>

        <!--        빈 공간 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</ScrollView>