<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 상단 앱바  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="20dp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/pc_orange"
                android:fontFamily="@font/notosanskr_medium"
                android:includeFontPadding="false"
                android:textSize="22dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_refrigerator_page_text"
                android:textColor="@color/black"
                android:fontFamily="@font/notosanskr_light"
                android:includeFontPadding="false"
                android:textSize="17dp"
                android:textFontWeight="700"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/avatar"
                android:scaleType="fitEnd"
                android:layout_centerVertical="true" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="125dp"
        android:gravity="center"
        android:text="@string/photo_scan_page_d0"
        android:fontFamily="@font/notosanskr_bold"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>


    <ImageButton
        android:id="@+id/add_ingredient_image"
        android:layout_width="216dp"
        android:layout_height="228dp"
        android:scaleType="fitCenter"
        android:background="@color/clear"
        android:src="@drawable/input_image_icon__1_"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/go_camera_scan_page"
        android:clickable="true"
        android:layout_width="379dp"
        android:layout_height="57dp"
        android:text="카메라로 스캔하기"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:background="@drawable/recipe_page_title_border"
        android:layout_marginTop="20dp"/>
</LinearLayout>
